# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1210 2010-05-14 17:41:30 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta1 (2010/??/??)
 - (2010/05/14) Fixed bug#4199 - Hard limit of 200 services defined in front-end files.
 - (2010/05/12) Renamed core module 'Kernel/System/StdResponse.pm' to 'Kernel/System/StandardResponse.pm'.
 - (2010/05/12) Fixed bug#4940 - SQL Improvement, deleted not needed GROUP BY statement.
 - (2010/05/07) Fixed bug#5005 - 'Statuses' is not correct in British English.
 - (2010/05/06) Implemented bug#3516 - added CustomerGroupSupport feature for
    customer navigation bar. Kudos Martin Balzarek.
 - (2010/05/04) Fixed bug#5249 - ArticleStorageFS should not die on failed rm.
    Kudos Dominik Schulz.
 - (2010/04/19) Improved bin/otrs.CreateTranslationFile.pl to get also
    translatable strings from sys config settings for translation catalog.
 - (2010/04/09) Added the feature to save searches in the Customer Frontend
 - (2010/04/08) Implemented fix for bug#2673 -  Ticket subject lines in customer
    frontend can be confusing.
 - (2010/04/06) made command line scripts consistent. They now all
     have the format 'otrs.DoThis.pl'. Also, SetPermissions.sh is removed
     because we already have otrs.SetPermissions.pl.
    otrs.mkStats.pl                 ->  otrs.GenerateStats.pl
    otrs.addGroup.pl                ->  otrs.AddGroup.pl
    otrs.addQueue.pl                ->  otrs.AddQueue.pl
    otrs.addRole.pl                 ->  otrs.AddRole.pl
    otrs.addRole2Group.pl           ->  otrs.AddRole2Group.pl
    otrs.addUser.pl                 ->  otrs.AddUser.pl
    otrs.addUser2Group.pl           ->  otrs.AddUser2Group.pl
    otrs.addUser2Role.pl            ->  otrs.AddUser2Role.pl